--- a/styles.css
+++ b/styles.css
@@ -6,15 +6,14 @@
   font-family:Khula;
   font-size:2em;
   text-align:center;
-  height:200px;
-  width:600px;
+  width:800px;
   display:block;
   position:absolute;
   color:white;
-  top:50px;
   bottom:0;
   left:0;
   right:0;
+  margin: 0 auto;
 }
 .console-underscore {
   display:inline-block;
@@ -23,16 +22,39 @@
   left:10px;
 }
 
-.movie {
-	text-align: center;
-	vertical-align: middle;
-	display: table-cell;
-	}
+iframe {
+   display: block;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-right: -50%;
+	transform: translate(-50%, -50%);
+	margin-top: 10px;
+}
 
 body {
-	display: table;
+	margin: 0;
 	height:100%;
 	width: 100%;
 	overflow: hidden;
 	background-image: url("background.jpg");
+	font-family: 'Raleway', sans-serif;
+}
+
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,,800,900);
+html{
+  width:100%;
+  height: 100%;
+}
+
+.title{
+  font-weight: 800;
+  color: transparent;
+  font-size:100px;
+  background: url("rainbow-nebula.jpg") repeat;
+  background-position: 40% 50%;
+  -webkit-background-clip: text;
+  position:relative;
+  text-align:center;
+  letter-spacing: -8px;
 }
